# pct-cnn

./: .gitignore  CMakeLists.txt  CMakeLists.txt.template  README.md
cnn_registration/: CMakeLists.txt
cnn_registration/src/: cnn_registration.cpp  icp_test.cpp
demos/icp_registration/: CMakeLists.txt  README.md  ipc_test_face.pcd
demos/icp_registration/src/: ipc_registration_demo.cpp
demos/pcl_visualizer/: CMakeLists.txt  README.md  pcl_visualizer_demo.cpp
demos/pcl_visualizer/src/: pcl_visualizer_demo.cpp
demos/pct_cnn_demo/: CMakeLists.txt  config.txt  pfhconfig.txt  riftconfig.txt  screenshotseries.sh  xyzconfig.txt
demos/pct_cnn_demo/src/: CNNTransformStrategy.hpp  CNNTransformStrategy.hpp.orig  Configuration.cpp  Configuration.cpp.orig  Configuration.hpp  Demo.cpp  Demo.cpp.orig  Demo.hpp  Demo.hpp.orig  DemoVisualizer.cpp  DemoVisualizer.cpp.orig  DemoVisualizer.hpp  KinectGrabber.cpp  KinectGrabber.hpp  PFHTransformStrategy.cpp  PFHTransformStrategy.hpp  TransformStrategy.hpp  Util.hpp
demos/point_cloud_factory/: CMakeLists.txt  cube.pcd
demos/point_cloud_factory/src/: PointCloudFactory.cpp  PointCloudFactory.hpp
